k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
  labels:
    name: bank-app
